lib_LIBRARIES=libGetkw.a

libGetkw_a_SOURCES= \
Getkw.cpp \
Getkw.h \
GetkwError.cpp \
GetkwError.h \
Keyval.cpp \
Keyval.h \
Keyvec.cpp \
Keyvec.h \
Keyword.cpp \
Keyword.h \
Section.cpp \
Section.h \
Keyval.h \
Keyvec.cpp \
Keyvec.h \
Keyword.cpp \
Keyword.h \
Section.cpp \
Section.h 

include_HEADERS= \
Getkw.h \
GetkwError.h \
Keyval.h \
Keyvec.h \
Keyword.h \
Section.h \
Keyvec.h \
Keyword.h \
Section.h 
