lib_LTLIBRARIES=libgetkw.la

libgetkw_la_CPPFLAGS=@BOOST_CPPFLAGS@
libgetkw_la_LDFLAGS=-version-info 1:1:1
libgetkw_la_SOURCES= \
Getkw.cpp \
Getkw.h \
GetkwError.cpp \
GetkwError.h \
Keyword.h \
Section.cpp \
Section.h \
messages.cpp \
messages.h

include_HEADERS= \
Getkw.h \
GetkwError.h \
Keyword.h \
Section.h 
